center timeline on small screens

--- a/public/css/work.css
+++ b/public/css/work.css
@@ -63,7 +63,7 @@
     height: 12px;
     width: 12px;
     background: black;
-    z-index: -1000;
+    z-index: -1;
 }
 
 .timeline-row .timeline-content:before {
@@ -140,11 +140,12 @@
     .timeline .timeline-row:nth-child(odd) {
         padding: 0;
     }
-    .timeline .timeline-row:nth-child(odd) .timeline-time {
+    .timeline .timeline-row .timeline-time {
         position: relative;
         top: 0;
         left: 0;
         margin: 0 0 10px 0;
+        text-align: center;
     }
     .timeline .timeline-row:nth-child(odd) .timeline-content {
         margin: 0;
@@ -157,12 +158,6 @@
     }
     .timeline .timeline-row:nth-child(even) {
         padding: 0;
-    }
-    .timeline .timeline-row:nth-child(even) .timeline-time {
-        position: relative;
-        top: 0;
-        left: 0;
-        margin: 0 0 10px 0;
     }
     .timeline .timeline-row:nth-child(even) .timeline-content {
         margin: 0;
