worked on project section, added github link

--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -1,3 +1,25 @@
-#projects {
-    min-height: 100vh;
+.card {
+    border-width: 2px;
+    border-color: black;
+    border-style: solid;
+    border-radius: 14px;
+    padding: 20px;
+    text-align: center;
+    transition: transform 150ms;
+}
+
+.card:hover {
+    transform: translateY(-8px);
+}
+
+.card > h4 {
+    margin: 0 0 10px 0;
+}
+
+.card > p {
+    margin: 0;
+}
+
+.project-wrapper {
+    padding: 16px;
 }
