--- a/public/css/all.css
+++ b/public/css/all.css
@@ -29,3 +29,8 @@ a:hover {
     text-decoration: none;
 }
 
+.section-header {
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
