--- a/public/css/work.css
+++ b/public/css/work.css
@@ -1,7 +1,3 @@
-#work {
-    min-height: 100vh;
-}
-
 .timeline {
     position: relative;
     padding: 5rem;
@@ -83,6 +79,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    margin-bottom: 0;
 }
 
 .timeline-row .timeline-content img {
