--- a/public/css/all.css
+++ b/public/css/all.css
@@ -3,6 +3,10 @@
     box-sizing: border-box;
 }
 
+p {
+    line-height: 1.5rem;
+}
+
 .remove-color-link {
     text-decoration: none;
     color: black;
