--- a/public/css/all.css
+++ b/public/css/all.css
@@ -38,3 +38,13 @@ a:hover {
     font-size: 1.4rem;
     font-weight: bold;
 }
+
+#footer {
+    text-align: center;
+}
+
+@media only screen and (max-width: 768px) {
+    .hide-on-mobile {
+        display: none;
+    }
+}
