--- a/public/css/all.css
+++ b/public/css/all.css
@@ -43,6 +43,14 @@ a:hover {
     text-align: center;
 }
 
+.svg {
+    transition: transform 150ms;
+}
+
+.svg:hover {
+    transform: translateY(-2px);
+}
+
 @media only screen and (max-width: 768px) {
     .hide-on-mobile {
         display: none;
