--- a/simple/css/style.css
+++ b/simple/css/style.css
@@ -4,6 +4,11 @@
   margin: 0;
 }
 
+body {
+  min-height: 100vh;
+  min-height: --webkit-fill-available;
+}
+
 #container {
   width: 100vw;
   height: 100vh;
