--- a/simple/css/style.css
+++ b/simple/css/style.css
@@ -6,8 +6,8 @@
 
 #container {
   width: 100vw;
-  min-height: 100vh;
-  min-height: --webkit-fill-available;
+  height: 100vh;
+  height: var(app-height);
   display: flex;
   flex-direction: column;
   align-items: center;
