css var naming fix

--- a/simple/css/style.css
+++ b/simple/css/style.css
@@ -7,7 +7,7 @@
 #container {
   width: 100vw;
   height: 100vh;
-  height: var(app-height);
+  height: var(--app-height);
   display: flex;
   flex-direction: column;
   align-items: center;
