--- a/simple/css/style.css
+++ b/simple/css/style.css
@@ -32,9 +32,9 @@
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #0a0a0a;
-    color: whitesmoke;
+    color: white;
   }
   .svg {
-    filter: invert(98%) sepia(5%) saturate(23%) hue-rotate(233deg) brightness(113%) contrast(92%);
+    filter: invert(100%);
   }
 }
