--- a/simple/css/style.css
+++ b/simple/css/style.css
@@ -44,6 +44,16 @@
   transform: translateY(-2px);
 }
 
+.link-inline {
+  transition: color 150ms;
+  color: inherit;
+  text-decoration: none;
+}
+
+.link-inline:hover {
+  color: #f8deb3
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #0a0a0a;
