--- a/simple/css/style.css
+++ b/simple/css/style.css
@@ -21,14 +21,13 @@
   0% {
     scale: 0.96;
     filter: blur(4px);
-      opacity: 0;
+    opacity: 0;
   }
   100% {
     filter: blur(0);
     opacity: 1;
   }
 }
-
 
 #link-container {
   display: flex;
@@ -51,7 +50,7 @@
 }
 
 .link-inline:hover {
-  color: #f8deb3
+  color: #f8deb3;
 }
 
 @media (prefers-color-scheme: dark) {
